[gd_scene load_steps=6 format=3 uid="uid://dcfet1el2xqni"]

[ext_resource type="Theme" uid="uid://dp7geumd7i46m" path="res://UI/theme.tres" id="1_jdrpo"]
[ext_resource type="Script" path="res://Scenes/pause_menu.gd" id="2_kf2gv"]
[ext_resource type="Texture2D" uid="uid://d2xg1ua0wk4l1" path="res://Assets/Third Party/Wikimedia Commons/bgx-luneta.png" id="3_ovyeo"]
[ext_resource type="PackedScene" uid="uid://cmr8j8cfpl35u" path="res://Tools/safe_area.tscn" id="3_scodv"]

[sub_resource type="LabelSettings" id="LabelSettings_baglt"]
font_size = 56

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 126
script = ExtResource("2_kf2gv")

[node name="PauseUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jdrpo")

[node name="bg" type="TextureRect" parent="PauseUI"]
modulate = Color(0.52549, 0.407843, 0.278431, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ovyeo")
expand_mode = 3
stretch_mode = 6

[node name="Label" type="Label" parent="PauseUI"]
layout_mode = 1
offset_left = 64.0
offset_top = 48.0
offset_right = 371.0
offset_bottom = 164.0
theme_override_font_sizes/font_size = 64
text = "pause"
label_settings = SubResource("LabelSettings_baglt")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -297.0
offset_top = -228.0
offset_right = -73.0
offset_bottom = -42.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 24
metadata/_edit_group_ = true

[node name="ContinueButton" type="Button" parent="PauseUI/VBoxContainer"]
layout_mode = 2
text = "Back to Game"

[node name="SettingsButton" type="Button" parent="PauseUI/VBoxContainer"]
layout_mode = 2
text = "settings"

[node name="BackToMenuButton" type="Button" parent="PauseUI/VBoxContainer"]
layout_mode = 2
text = "Go to Main Menu"

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="SafeArea" parent="." instance=ExtResource("3_scodv")]
visible = false

[connection signal="pressed" from="PauseUI/VBoxContainer/ContinueButton" to="." method="continue_the_game"]
[connection signal="pressed" from="PauseUI/VBoxContainer/SettingsButton" to="." method="go_to_settings"]
[connection signal="pressed" from="PauseUI/VBoxContainer/BackToMenuButton" to="." method="back_to_main_menu"]
